--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -66,7 +66,7 @@
 
 
         <div>Desciption : <span id="description"></span> 
-        <img id="imgg" src=""></img></div>
+        <img id="imgg" src="" ></img></div>
 
         <div>Temperature : <span id="temp">25</span> ° </div>
 
